--- a/TeamClicker.1/clickerMainS.css
+++ b/TeamClicker.1/clickerMainS.css
@@ -1,4 +1,11 @@
-﻿.clickerbutton {
+﻿* {
+    cursor: url(pictures/cursor.png), auto;
+}
+cursor {
+    width: 32px;
+    height: 32px;
+}
+.clickerbutton {
     opacity: 1;
     align-self: center;
     background-color: lightgoldenrodyellow;
@@ -56,7 +63,7 @@ body {
         opacity: 0;
     }
 }
-#continueGame,#muteMusic,#newGame,#SaveProgress{
+#continueGame,#muteMusic,#newGame,#SaveProgress,#SellAll{
     opacity: 0;
 }
     #muteMusic {
@@ -163,8 +170,8 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 30vh;
-    height: 40%;
+    width: 20vw;
+    height: 30vw;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.5s ease-in-out, transform 0.3s ease;
@@ -177,3 +184,25 @@ body {
     #ST1.animated.fadeIn {
         opacity: 1;
     }
+/*#SellAll {
+    margin-top: 16px;
+    padding: 8px 16px;
+    background-color: transparent;
+    color: darkolivegreen;
+    font-size: 1.5vw;
+    border-color: black;
+    border-radius: 8px;
+    position: fixed;
+    top: 80%;
+    right: 25%;
+    transform: translateY(-50%);
+    text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.5);
+    width:8vw;
+    height:4vw;
+}
+    #SellAll:hover {
+        color: white;
+        background-color: black;
+        top: 79.5%;
+        text-shadow: 2px 2px 2px white;
+    }*/
