--- a/MineClicker/styles/block.css
+++ b/MineClicker/styles/block.css
@@ -27,9 +27,8 @@
     background-repeat: no-repeat;
     background-size: contain;
     image-rendering: pixelated;
-    
-    border: solid black 1px;
 }
+.cube .break{ border: solid black 1px; opacity: 0.7;}
 
 .cube .front {transform: translateZ(-50px) rotateY(0deg) translateZ(50px);}
 .cube .back {transform: translateZ(-50px) rotateX(180deg) translateZ(50px);}
