--- a/MineClicker/styles/style.css
+++ b/MineClicker/styles/style.css
@@ -6,3 +6,25 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.emeralds {
+    width: 120px;
+    height: 40px;
+
+    position: absolute;
+    top: 5px;
+    left: calc(50vw - 60px);
+
+    background-color: rgba(255,255,255, 0.3);
+    backdrop-filter: blur(10px);
+    border: 2px solid black;
+    border-radius: 5px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    font-size: 120%;
+    font-weight: bold;
+    color: limegreen;
+}
