--- a/MineClicker/styles/inventory.css
+++ b/MineClicker/styles/inventory.css
@@ -1,12 +1,22 @@
 
-#inventory{
+.bottombar{
     position: absolute;
-    top: 92vh;
-    left: calc( 50% - 36vh );
+    bottom: 0;
+    left: calc( 50% - 38vh );
 
+    height: 15vh;
+    width: 90vh;
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.bottombar #inventory{
     height: 8vh;
     width: 72vh;
-
+    
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -16,9 +26,10 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    background-image: url('../images/HotBar.png');
 }
 
-#inventory .slot{
+.bottombar #inventory .slot{
     width: 6vh;
     height: 6vh;
 
@@ -31,4 +42,43 @@
     background-position: center;
     background-size: 90%;
     background-repeat: no-repeat;
+}
+
+
+.bottombar #sellbutton{
+    height: 100%;
+    width: 10vh;
+    
+    background-image: url('../images/trader.png');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.bottombar #sellbutton p{
+    width: 100%;
+    height: 40%;
+    margin-bottom: 10%;
+
+    backdrop-filter: blur(4px);
+    border: 1px solid white;
+    border-radius: 5px;
+
+    color: white;
+    font-size: 100%;
+    font-weight: bold;
+    transition: 0.2s;
+
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottombar #sellbutton p:hover{
+    border-color: lime;
+    color: lime;
 }
