--- a/MineClicker/styles/block.css
+++ b/MineClicker/styles/block.css
@@ -25,7 +25,7 @@
 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     image-rendering: pixelated;
 }
 .cube>span
