--- a/MineClicker/styles/style.css
+++ b/MineClicker/styles/style.css
@@ -1,10 +1,12 @@
-* { margin: 0; padding: 0; user-select: none; cursor: url('../images/cursor.png'), auto; }
+* { margin: 0; padding: 0; user-select: none; }
 html, body {width: 100%; height: 100%; overflow: hidden;}
 
 body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    cursor: default, auto;
 }
 
 .topbar{
