--- a/MineClicker/styles/menu.css
+++ b/MineClicker/styles/menu.css
@@ -206,3 +206,30 @@ body::-webkit-scrollbar {
     pointer-events: none;
     transition: opacity 0.5s ease-in-out, transform 0.3s ease;
 }
+
+#import {
+    margin-top: 16px;
+    padding: 8px 16px;
+    background-color: #008CBA;
+    color: white;
+    font-size: 14px;
+    border: none;
+    border-radius: 8px;
+}
+#import:hover {
+    color:black;
+    left:9%;
+}
+#export {
+    margin-top: 16px;
+    padding: 8px 16px;
+    background-color: #008CBA;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 8px;
+}
+#export:hover {
+    color:black;
+    left:9%;
+}
